# ANSE-Agent-Sensor-Actuator-Engine

./: .gitignore  AUDIT_REPORT_FEB_2026.md  BACKEND_REFACTORING_COMPLETE.md  CONTRIBUTING.md  DASHBOARD_ARCHITECTURE.md  DASHBOARD_COMPLETE.md  DASHBOARD_FILE_MAP.md  DASHBOARD_QUICKSTART.md  DASHBOARD_STATUS.txt  DashboardExample.svelte  FINAL_VALIDATION_REPORT.md  GITHUB_DISCOVERY_GUIDE.md  INSTALLATION.md  LICENSE  PHASE_4_ROADMAP.md  PLUGIN_SYSTEM_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PUSH_TO_GITHUB.txt  QUICK_START.md  README.md  ROADMAP.md  SCREENSHOTS.md  WHAT_ANSE_IS.md  agent_demo.py  agent_output.txt  dashboard.html  dashboard_client.ts  dashboard_server.py  demo_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt
anse/: __init__.py  agent_bridge.py  audit.py  diagnostics.py  engine_core.py  health.py  multiagent.py  operator_ui_bridge.py  plugin.py  plugin_loader.py  scheduler.py  tool_registry.py  world_model.py
backend/: README.md  __init__.py  requirements.txt  websocket_backend.py
dashboard/: README.md  index.html
dashboard_ui/: README.md  dashboard.html
docs/: API.md  AUTONOMOUS_AGENT_UPDATE.md  CLEANED_STRUCTURE.txt  DASHBOARD_BRIDGE.md  DESIGN.md  DOCUMENTATION_SUMMARY.md  EVENT_DRIVEN_ARCHITECTURE.md  EVENT_DRIVEN_CHEATSHEET.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_POLLING_TO_EVENTS.md  PLUGINS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  TROUBLESHOOTING_EVENT_DRIVEN.md
examples/: README.md  plugin_demo.py  start_with_ui.py
instance/: operator_ui.db
operator_ui/: README.md  __init__.py  app.py  models.py  requirements.txt
(+70 files in other folders)
